config file postcss

--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -37,7 +37,8 @@ RUN mkdir -p /cre/node/wc-template && \
     cd /cre/node && \
     vue create -d -f wc-template
 RUN cp /cre/node/vue-common/install.sh /cre/node/wc-template/
-RUN cp /cre/node/vue-common/.eslintrc.js /cre/node/wc-template/
+RUN cp /cre/node/vue-common/eslintrc.js /cre/node/wc-template/
+RUN cp /cre/node/vue-common/postcss.config.js /cre/node/wc-template/
 RUN cp /cre/node/vue-common/vue.config.js /cre/node/wc-template/
 
 RUN mkdir -p /cre/node/js-template/src && \
