switch off test, precss local

--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -63,6 +63,7 @@ RUN cd /cre/node/wc-template  && \
     npm install --save-dev @babel/plugin-transform-runtime  && \ 
     npm install --save @babel/runtime   
 RUN npm install --save es6-promise   # vuex
+RUN npm install --save precss
 RUN npm install --save core-js@2 # needs version 2 for now (instead of 3)
 #RUN npm install --save babel-polyfill
 RUN npm install --save primevue primeicons
