--- a/crePhpRust/Dockerfile
+++ b/crePhpRust/Dockerfile
@@ -33,7 +33,10 @@ RUN curl -sL https://deb.nodesource.com/setup_11.x | bash - && \
 ##RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -y
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
-RUN $HOME/.cargo/env
+#RUN $HOME/.cargo/env
+RUN source $HOME/.cargo/env
+
+##RUN snap install rustup --edge --classic
 
 RUN rustc --version
 
