--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -39,10 +39,9 @@ COPY cre /cre
 #   unzip /cre/tmp/yii-demo1.zip -d /cre/tmp/yii-demo1 && \
 #   cd /cre/tmp/yii-demo1
 
-RUN mkdir -p /cre/tmp 
-RUN cd /cre/tmp
-RUN git clone https://github.com/yiisoft/yii-demo.git --recursive
-RUN cd /cre/tmp/yii-demo
+RUN mkdir -p /cre/tmp && cd /cre/tmp \
+ && git clone https://github.com/yiisoft/yii-demo.git --recursive \
+ && cd /cre/tmp/yii-demo \
 
 
 ## template
