--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -45,7 +45,7 @@ RUN cd /cre/tmp/yii-demo \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-mysql \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-pgsql \
  && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-sqlite \
- && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-elasticsearch \
+ && composer require --prefer-stable --update-with-all-dependencies yiisoft/db-elasticsearch 
 
 RUN cd /cre/tmp/yii \
  && composer config repositories.npm '{"type": "composer", "url": "https://asset-packagist.org"}' \
