--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -73,7 +73,8 @@ RUN cd /cre/tmp/yii-demo \
 
 #config/web.php
 
-RUN cd /cre/tmp/yii && composer install && composer dump-autoload
+#RUN cd /cre/tmp/yii && composer install && composer dump-autoload
+RUN cd /cre/tmp/yii-demo && composer install && composer dump-autoload
 
 ##VOLUME ["/cre/www/yii"]
 WORKDIR "/cre/www"
