--- a/crePython/Dockerfile
+++ b/crePython/Dockerfile
@@ -70,7 +70,9 @@ RUN apt-get -y --no-install-recommends install clisp
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
    echo "$(date +'%F %R') \t crePYTHON \t $PYTHON_VERSION" >> /cre/versions.txt && \
-   echo "$(date +'%F %R') \t Python3 \t $(python3 --version)" >> /cre/versions.txt && \  
+   echo "$(date +'%F %R') \t Python3 \t $(python3 --version)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t $(R --version | grep 'R version')" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t $(latex --version | grep Debian)" >> /cre/versions.txt && \ 
    echo "$(date +'%F %R') \t  npm \t $(npm --version)" >> /cre/versions.txt 
 
 #COPY cre /cre
