--- a/crePython/Dockerfile
+++ b/crePython/Dockerfile
@@ -66,7 +66,7 @@ RUN apt-get -y --no-install-recommends install clisp
 RUN apt-get -y --no-install-recommends install sbcl
 
 # move to ubuntu later
-RUN apt-get install jq 
+RUN apt-get -y --no-install-recommends install jq 
 
 # roswell ## move to python later
 RUN curl -sOL `curl -s https://api.github.com/repos/roswell/roswell/releases/latest | jq -r '.assets | .[] | select(.name|test("deb$")) | .browser_download_url'`
