--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -55,9 +55,9 @@ RUN python3 -m pip install notebook  # needed if running the notebook servers lo
 RUN python3 -m pip install jupyterlab
 RUN python3 -m pip install ipywidgets
 
-RUN apt-get -y --no-install-recommends install ijulia
-RUN apt-get -y --no-install-recommends install irkernel
-RUN apt-get -y --no-install-recommends install ijavascript
+RUN python3 -m pip install ijulia
+RUN python3 -m pip installl irkernel
+RUN python3 -m pip install ijavascript
 
 
 # check??
@@ -81,6 +81,8 @@ RUN sbcl --non-interactive --load /cre/quicklisp.lisp
 # curl -O https://beta.quicklisp.org/quicklisp.lisp
 # curl -O https://beta.quicklisp.org/quicklisp.lisp.asc
 # gpg --verify quicklisp.lisp.asc quicklisp.lisp
+
+#RUN ros install common-lisp-jupyter
 
 RUN mkdir /cre/cl && \ 
    wget https://github.com/fredokun/cl-jupyter/archive/master.zip -O /cre/cl-jupyter.zip && \
