--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -56,8 +56,12 @@ RUN python3 -m pip install jupyterlab
 RUN python3 -m pip install ipywidgets
 
 #RUN python3 -m pip install ijulia
-#RUN python3 -m pip installl irkernel
 #RUN python3 -m pip install ijavascript
+
+#R kernel
+#RUN python3 -m pip installl irkernel
+#RUN apt-get -y --no-install-recommends install libzmq3-dev
+RUN Rscript /cre/rkernel-install.r
 
 
 # check??
