--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -55,12 +55,6 @@ RUN python3 -m pip install notebook  # needed if running the notebook servers lo
 RUN python3 -m pip install jupyterlab
 RUN python3 -m pip install ipywidgets
 
-#RUN python3 -m pip install ijulia
-#RUN python3 -m pip install ijavascript
-
-
-
-
 # check??
 #jupyterhub -h
 #configurable-http-proxy -h
@@ -102,10 +96,9 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 COPY cre /cre
 
 #R kernel
-#RUN python3 -m pip installl irkernel
-#RUN apt-get -y --no-install-recommends install libzmq3-dev
-RUN Rscript /cre/rkernel-install.r
-
+RUN Rscript /cre/kernel-r-install.r
+#Julia kernel
+RUN julia /cre/kernel-julia-install.jl
 
 # Define mountable directories.
 VOLUME ["/cre/jupyter"]
