--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -33,6 +33,7 @@ WORKDIR /cre/
 
 RUN pip3 install --upgrade pip
 RUN pip3 install tensorflow
+RUN pip3 install tensorboard
 
 RUN curl https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-cpu-linux-x86_64-1.14.0.tar.gz > /cre/libtensorflow-cpu-linux-x86_64-1.14.0.tar.gz && \
     tar -C /usr/local -xzf /cre/libtensorflow-cpu-linux-x86_64-1.14.0.tar.gz
