--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -55,6 +55,8 @@ RUN python3 -m pip install notebook  # needed if running the notebook servers lo
 RUN python3 -m pip install jupyterlab
 RUN python3 -m pip install ipywidgets
 
+RUN pip3 install jupyter-tensorboard
+
 # check??
 #jupyterhub -h
 #configurable-http-proxy -h
