--- a/creTensorflow/Dockerfile
+++ b/creTensorflow/Dockerfile
@@ -41,7 +41,7 @@ RUN ldconfig
 
 
 ## Install AutoML sklearn
-RUN apt-get install swig  # move to ubuntu
+RUN apt-get install -y swig  # move to ubuntu
 RUN curl https://raw.githubusercontent.com/automl/auto-sklearn/master/requirements.txt | xargs -n 1 -L 1 pip3 install
 RUN pip install auto-sklearn
 
